ndb - bug#18295   more work-arounds for gcc4

storage/ndb/src/kernel/vm/Pool.hpp:
  More gcc4 craziness